fixed container not stretching from top to bottom

--- a/mat/mat.css
+++ b/mat/mat.css
@@ -1,5 +1,6 @@
 main {
     padding: 0;
+    height: 100vh;
 }
 
 .container {
